feat(auth-ui): animated login & registration with brand theme, footer, 404, and legal pages
- Add framer-motion and implement animated, brand-consistent Login
- Create Register page with live password validation and terms acceptance
- Introduce global Footer; move legal links from card to footer
- Add themed Privacy Policy and Terms pages
- Add custom 404 (not-found) with brand background
- Implement Tailwind @theme tokens and unique background utilities
- Fix React type issues (type-only imports) and clean lints

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "framer-motion": "^12.23.12",
     "involuck-monorepo": "file:..",
     "next": "15.4.6",
     "postcss": "^8.5.6",
