--- a/package.json
+++ b/package.json
@@ -6,33 +6,24 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "type-check": "tsc --noEmit"
+    "lint": "next lint"
   },
   "dependencies": {
     "framer-motion": "^12.23.12",
-    "involuck-monorepo": "file:..",
     "next": "15.4.6",
-    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.11",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^16.3.0",
-    "@types/jest": "^29.5.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.17",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.4.33",
     "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
