--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/swc-win32-x64-msvc": "15.4.6",
     "framer-motion": "^12.23.12",
     "next": "15.4.6",
     "react": "19.1.0",
