--- a/package.json
+++ b/package.json
@@ -9,23 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/swc-win32-x64-msvc": "15.4.6",
     "framer-motion": "^12.23.12",
-    "next": "15.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "next": "14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.17",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.6",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8.4.33",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
