Setup Playwright and add Home system tests with CI/CD workflow - Installed Playwright and necessary browsers - Created system test for Home page button interaction - Configured GitHub Actions workflow for running system tests - Ensured test is ready to run locally and in CI

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,10 @@ next-env.d.ts
 
 # Keep only root lockfile
 package-lock.json
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
