chore(ci): add jobs in ci.yml and configure tests, eslint and prettier

--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,13 @@
 
 # testing
 /coverage
-/test-results/
-/playwright-report/
 
 # next.js
 /.next/
 /out/
+
+# vscode 
+/.vscode
 
 # production
 /build
@@ -42,5 +43,14 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+
 # Keep only root lockfile
-# package-lock.json <-- .
+package-lock.json
+
+# test results
+/test-results
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+
+.swc
