--- a/package.json
+++ b/package.json
@@ -6,37 +6,50 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "test:unit": "jest --coverage --testPathPatterns=\"src/__tests__/unit/\"",
+    "test:integration": "jest --testPathPatterns=\"src/__tests__/integration/\"",
     "test:e2e": "playwright test",
-    "type-check": "tsc --noEmit"
+    "test": "npm run test:unit && npm run test:integration && npm run test:e2e",
+    "check": "npm run format && npm run lint && npm run lint:fix && npm run test"
   },
   "dependencies": {
-    "framer-motion": "^11.2.10",
-    "involuck-monorepo": "file:..",
-    "next": "14.2.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "framer-motion": "^12.23.12",
+    "next": "^14.2.32",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.44.1",
-    "@tailwindcss/postcss": "^4.0.0-alpha.13",
-    "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "^15.0.7",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.12",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.3",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "ts-jest": "^29.1.4",
-    "typescript": "^5.4.5"
+    "@eslint/js": "^9.33.0",
+    "@playwright/test": "^1.55.0",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^8.40.0",
+    "@typescript-eslint/parser": "^8.40.0",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.5.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.3.0",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
+    "postcss": "^8.4.33",
+    "prettier": "^3.6.2",
+    "tailwindcss": "^4.1.11",
+    "ts-jest": "^29.4.1",
+    "typescript": "^5",
+    "typescript-eslint": "^8.40.0",
+    "whatwg-fetch": "^3.6.20"
   }
 }
