--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,6 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: npx playwright install --with-deps
 
-      # Crear artifact con node_modules para jobs que fallen el cache
       - name: Create node_modules artifact
         if: steps.cache.outputs.cache-hit != 'true'
         uses: actions/upload-artifact@v4
@@ -57,15 +56,6 @@ jobs:
           name: node-modules
           path: node_modules/
           retention-days: 1
-
-  # Add output to track if artifact was created
-  setup:
-    name: Setup Dependencies
-    runs-on: ubuntu-latest
-    outputs:
-      cache-hit: ${{ steps.cache.outputs.cache-hit }}
-      cache-key: ${{ steps.cache.outputs.cache-primary-key }}
-      artifact-created: ${{ steps.cache.outputs.cache-hit != 'true' }}
 
   linters:
     name: Linters & Code Quality
@@ -86,16 +76,19 @@ jobs:
           fail-on-cache-miss: false
 
       - name: Download node_modules artifact (fallback)
-        if: steps.cache.outputs.cache-hit != 'true' && needs.setup.outputs.artifact-created == 'true'
+        if:
+          steps.cache.outputs.cache-hit != 'true' &&
+          needs.setup.outputs.artifact-created == 'true'
         uses: actions/download-artifact@v4
         with:
           name: node-modules
           path: node_modules/
 
       - name: Install dependencies (emergency fallback)
-        if: steps.cache.outputs.cache-hit != 'true' && needs.setup.outputs.artifact-created != 'true'
-        run: |
-          npm ci
+        if:
+          steps.cache.outputs.cache-hit != 'true' &&
+          needs.setup.outputs.artifact-created != 'true'
+        run: npm ci
 
       - name: Set up Node.js (only if cache miss)
         if: steps.cache.outputs.cache-hit != 'true'
@@ -131,14 +124,18 @@ jobs:
           fail-on-cache-miss: false
 
       - name: Download node_modules artifact (fallback)
-        if: steps.cache.outputs.cache-hit != 'true' && needs.setup.outputs.artifact-created == 'true'
+        if:
+          steps.cache.outputs.cache-hit != 'true' &&
+          needs.setup.outputs.artifact-created == 'true'
         uses: actions/download-artifact@v4
         with:
           name: node-modules
           path: node_modules/
 
       - name: Install dependencies (emergency fallback)
-        if: steps.cache.outputs.cache-hit != 'true' && needs.setup.outputs.artifact-created != 'true'
+        if:
+          steps.cache.outputs.cache-hit != 'true' &&
+          needs.setup.outputs.artifact-created != 'true'
         run: npm ci
 
       - name: Set up Node.js (only if cache miss)
@@ -182,14 +179,18 @@ jobs:
           fail-on-cache-miss: false
 
       - name: Download node_modules artifact (fallback)
-        if: steps.cache.outputs.cache-hit != 'true' && needs.setup.outputs.artifact-created == 'true'
+        if:
+          steps.cache.outputs.cache-hit != 'true' &&
+          needs.setup.outputs.artifact-created == 'true'
         uses: actions/download-artifact@v4
         with:
           name: node-modules
           path: node_modules/
 
       - name: Install dependencies (emergency fallback)
-        if: steps.cache.outputs.cache-hit != 'true' && needs.setup.outputs.artifact-created != 'true'
+        if:
+          steps.cache.outputs.cache-hit != 'true' &&
+          needs.setup.outputs.artifact-created != 'true'
         run: npm ci
 
       - name: Set up Node.js (only if cache miss)
@@ -220,14 +221,18 @@ jobs:
           fail-on-cache-miss: false
 
       - name: Download node_modules artifact (fallback)
-        if: steps.cache.outputs.cache-hit != 'true' && needs.setup.outputs.artifact-created == 'true'
+        if:
+          steps.cache.outputs.cache-hit != 'true' &&
+          needs.setup.outputs.artifact-created == 'true'
         uses: actions/download-artifact@v4
         with:
           name: node-modules
           path: node_modules/
 
       - name: Install dependencies (emergency fallback)
-        if: steps.cache.outputs.cache-hit != 'true' && needs.setup.outputs.artifact-created != 'true'
+        if:
+          steps.cache.outputs.cache-hit != 'true' &&
+          needs.setup.outputs.artifact-created != 'true'
         run: npm ci
 
       - name: Set up Node.js (only if cache miss)
@@ -416,13 +421,11 @@ jobs:
     name: Deployment Check
     runs-on: ubuntu-latest
     needs:
-      [
-        unit_tests,
-        integration_tests,
-        system_tests,
-        security_scan,
-        performance_check
-      ]
+      - unit_tests
+      - integration_tests
+      - system_tests
+      - security_scan
+      - performance_check
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Check all jobs status
