--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,8 @@ jobs:
         if:
           steps.cache.outputs.cache-hit != 'true' &&
           needs.setup.outputs.artifact-created != 'true'
-        run: npm ci
+        run: |
+          npm ci
 
       - name: Set up Node.js (only if cache miss)
         if: steps.cache.outputs.cache-hit != 'true'
@@ -254,7 +255,7 @@ jobs:
   system_tests:
     name: System Tests (E2E)
     runs-on: ubuntu-latest
-    needs: [build, unit_tests, integration_tests]
+    needs: [setup, build, unit_tests, integration_tests]
     timeout-minutes: 15
     strategy:
       fail-fast: false
@@ -275,11 +276,19 @@ jobs:
           fail-on-cache-miss: false
 
       - name: Download node_modules artifact (fallback)
-        if: steps.cache.outputs.cache-hit != 'true'
+        if:
+          steps.cache.outputs.cache-hit != 'true' &&
+          needs.setup.outputs.artifact-created == 'true'
         uses: actions/download-artifact@v4
         with:
           name: node-modules
           path: node_modules/
+
+      - name: Install dependencies (emergency fallback)
+        if:
+          steps.cache.outputs.cache-hit != 'true' &&
+          needs.setup.outputs.artifact-created != 'true'
+        run: npm ci
 
       - name: Download build artifacts
         uses: actions/download-artifact@v4
@@ -335,11 +344,19 @@ jobs:
           fail-on-cache-miss: false
 
       - name: Download node_modules artifact (fallback)
-        if: steps.cache.outputs.cache-hit != 'true'
+        if:
+          steps.cache.outputs.cache-hit != 'true' &&
+          needs.setup.outputs.artifact-created == 'true'
         uses: actions/download-artifact@v4
         with:
           name: node-modules
           path: node_modules/
+
+      - name: Install dependencies (emergency fallback)
+        if:
+          steps.cache.outputs.cache-hit != 'true' &&
+          needs.setup.outputs.artifact-created != 'true'
+        run: npm ci
 
       - name: Set up Node.js (only if cache miss)
         if: steps.cache.outputs.cache-hit != 'true'
@@ -370,7 +387,7 @@ jobs:
   performance_check:
     name: Performance Check
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [setup, build]
     continue-on-error: true
     steps:
       - name: Check out repository
@@ -387,11 +404,19 @@ jobs:
           fail-on-cache-miss: false
 
       - name: Download node_modules artifact (fallback)
-        if: steps.cache.outputs.cache-hit != 'true'
+        if:
+          steps.cache.outputs.cache-hit != 'true' &&
+          needs.setup.outputs.artifact-created == 'true'
         uses: actions/download-artifact@v4
         with:
           name: node-modules
           path: node_modules/
+
+      - name: Install dependencies (emergency fallback)
+        if:
+          steps.cache.outputs.cache-hit != 'true' &&
+          needs.setup.outputs.artifact-created != 'true'
+        run: npm ci
 
       - name: Download build artifacts
         uses: actions/download-artifact@v4
@@ -421,11 +446,13 @@ jobs:
     name: Deployment Check
     runs-on: ubuntu-latest
     needs:
-      - unit_tests
-      - integration_tests
-      - system_tests
-      - security_scan
-      - performance_check
+      [
+        unit_tests,
+        integration_tests,
+        system_tests,
+        security_scan,
+        performance_check
+      ]
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Check all jobs status
