--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -266,7 +266,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build
-          path: .next
+          path: .next/
           retention-days: 7
 
   system_tests:
