--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,17 +18,15 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       cache-hit: ${{ steps.cache.outputs.cache-hit }}
-      cache-key: ${{ steps.generate-key.outputs.key }}
-      artifact-created: ${{ steps.cache.outputs.cache-hit != 'true' }}
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Generate cache key
-        id: generate-key
-        run:
-          echo "key=v1-${{ runner.os }}-node-${{ hashFiles('package-lock.json')
-          }}" >> $GITHUB_OUTPUT
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
 
       - name: Cache dependencies
         id: cache
@@ -37,9 +35,15 @@ jobs:
           path: |
             node_modules
             ~/.cache/ms-playwright
-          key: ${{ steps.generate-key.outputs.key }}
-          restore-keys: |
-            v1-${{ runner.os }}-node-
+          key: v1-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: npm ci
+
+      - name: Install Playwright browsers
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: npx playwright install --with-deps
 
   linters:
     name: Linters & Code Quality
@@ -49,37 +53,23 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Restore from cache
-        uses: actions/cache/restore@v3
-        id: cache
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+
+      - name: Restore dependencies
+        uses: actions/cache@v3
         with:
           path: |
             node_modules
             ~/.cache/ms-playwright
-          key: ${{ needs.setup.outputs.cache-key }}
-          fail-on-cache-miss: false
+          key: v1-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
 
-      - name: Download node_modules artifact (fallback)
-        if:
-          steps.cache.outputs.cache-hit != 'true' &&
-          needs.setup.outputs.artifact-created == 'true'
-        uses: actions/download-artifact@v4
-        with:
-          name: node-modules
-          path: node_modules/
-
-      - name: Install dependencies (emergency fallback)
-        if:
-          steps.cache.outputs.cache-hit != 'true' &&
-          needs.setup.outputs.artifact-created != 'true'
-        run: |
-          npm ci
-
-      - name: Set up Node.js (only if cache miss)
-        if: steps.cache.outputs.cache-hit != 'true'
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
+      - name: Install dependencies (fallback)
+        if: needs.setup.outputs.cache-hit != 'true'
+        run: npm ci
 
       - name: Run ESLint
         run: npm run lint
@@ -98,36 +88,23 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Restore from cache
-        uses: actions/cache/restore@v3
-        id: cache
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+
+      - name: Restore dependencies
+        uses: actions/cache@v3
         with:
           path: |
             node_modules
             ~/.cache/ms-playwright
-          key: ${{ needs.setup.outputs.cache-key }}
-          fail-on-cache-miss: false
+          key: v1-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
 
-      - name: Download node_modules artifact (fallback)
-        if:
-          steps.cache.outputs.cache-hit != 'true' &&
-          needs.setup.outputs.artifact-created == 'true'
-        uses: actions/download-artifact@v4
-        with:
-          name: node-modules
-          path: node_modules/
-
-      - name: Install dependencies (emergency fallback)
-        if:
-          steps.cache.outputs.cache-hit != 'true' &&
-          needs.setup.outputs.artifact-created != 'true'
+      - name: Install dependencies (fallback)
+        if: needs.setup.outputs.cache-hit != 'true'
         run: npm ci
-
-      - name: Set up Node.js (only if cache miss)
-        if: steps.cache.outputs.cache-hit != 'true'
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
 
       - name: Run unit tests with coverage
         run: npm run test:unit
@@ -153,36 +130,23 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Restore from cache
-        uses: actions/cache/restore@v3
-        id: cache
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+
+      - name: Restore dependencies
+        uses: actions/cache@v3
         with:
           path: |
             node_modules
             ~/.cache/ms-playwright
-          key: ${{ needs.setup.outputs.cache-key }}
-          fail-on-cache-miss: false
+          key: v1-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
 
-      - name: Download node_modules artifact (fallback)
-        if:
-          steps.cache.outputs.cache-hit != 'true' &&
-          needs.setup.outputs.artifact-created == 'true'
-        uses: actions/download-artifact@v4
-        with:
-          name: node-modules
-          path: node_modules/
-
-      - name: Install dependencies (emergency fallback)
-        if:
-          steps.cache.outputs.cache-hit != 'true' &&
-          needs.setup.outputs.artifact-created != 'true'
+      - name: Install dependencies (fallback)
+        if: needs.setup.outputs.cache-hit != 'true'
         run: npm ci
-
-      - name: Set up Node.js (only if cache miss)
-        if: steps.cache.outputs.cache-hit != 'true'
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
 
       - name: Run integration tests
         run: npm run test:integration
@@ -201,82 +165,31 @@ jobs:
           node-version: 20
           cache: 'npm'
 
-      - name: Restore from cache
-        uses: actions/cache/restore@v3
-        id: cache
+      - name: Restore dependencies
+        uses: actions/cache@v3
         with:
           path: |
             node_modules
             ~/.cache/ms-playwright
-          key: ${{ needs.setup.outputs.cache-key }}
-          fail-on-cache-miss: false
+          key: v1-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
 
-      - name: Download node_modules artifact (fallback)
-        if:
-          steps.cache.outputs.cache-hit != 'true' &&
-          needs.setup.outputs.artifact-created == 'true'
-        uses: actions/download-artifact@v4
-        with:
-          name: node-modules
-          path: node_modules/
-
-      - name: Install dependencies (emergency fallback)
-        if:
-          steps.cache.outputs.cache-hit != 'true' &&
-          needs.setup.outputs.artifact-created != 'true'
+      - name: Install dependencies (fallback)
+        if: needs.setup.outputs.cache-hit != 'true'
         run: npm ci
 
       - name: Build Next.js app
-        run: |
-          echo "Starting build process..."
-          npm run build
-          BUILD_EXIT_CODE=$?
-          echo "Build exit code: $BUILD_EXIT_CODE"
+        run: npm run build
 
-          if [ $BUILD_EXIT_CODE -ne 0 ]; then
-            echo "❌ Build failed with exit code $BUILD_EXIT_CODE"
-            exit $BUILD_EXIT_CODE
-          fi
-
-          echo "✅ Build completed successfully"
-
-      - name: Verify build artifacts
-        run: |
-          echo "Verifying build output..."
-
-          if [ ! -d ".next" ]; then
-            echo "❌ Error: .next directory not found"
-            echo "Current directory contents:"
-            ls -la
-            exit 1
-          fi
-
-          echo "✅ .next directory found"
-          echo "Contents of .next directory:"
-          ls -la .next/
-
-          # Check if .next has the expected structure
-          if [ -d ".next/static" ] && [ -d ".next/server" ]; then
-            echo "✅ Build artifacts structure looks correct"
-          else
-            echo "⚠️ Warning: Unexpected .next structure"
-          fi
-
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
+      - name: Cache build artifacts
+        uses: actions/cache@v3
         with:
-          name: build-files
-          path: |
-            .next/static
-            .next/server
-            .next/*.json
-            .next/BUILD_ID
-          retention-days: 1
+          path: .next
+          key: v1-build-${{ github.sha }}
 
   system_tests:
     name: System Tests (E2E)
     runs-on: ubuntu-latest
-    needs: [setup, build, unit_tests, integration_tests]
+    needs: [build, unit_tests, integration_tests]
     timeout-minutes: 15
     strategy:
       fail-fast: false
@@ -286,45 +199,32 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Restore from cache
-        uses: actions/cache/restore@v3
-        id: cache
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+
+      - name: Restore dependencies
+        uses: actions/cache@v3
         with:
           path: |
             node_modules
             ~/.cache/ms-playwright
-          key: ${{ needs.setup.outputs.cache-key }}
-          fail-on-cache-miss: false
+          key: v1-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
 
-      - name: Download node_modules artifact (fallback)
-        if:
-          steps.cache.outputs.cache-hit != 'true' &&
-          needs.setup.outputs.artifact-created == 'true'
-        uses: actions/download-artifact@v4
+      - name: Restore build artifacts
+        uses: actions/cache@v3
         with:
-          name: node-modules
-          path: node_modules/
+          path: .next
+          key: v1-build-${{ github.sha }}
 
-      - name: Install dependencies (emergency fallback)
-        if:
-          steps.cache.outputs.cache-hit != 'true' &&
-          needs.setup.outputs.artifact-created != 'true'
+      - name: Install dependencies (fallback)
+        if: needs.setup.outputs.cache-hit != 'true'
         run: npm ci
 
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: build-files
-          path: .next
-
-      - name: Set up Node.js (only if cache miss)
-        if: steps.cache.outputs.cache-hit != 'true'
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
       - name: Install Playwright browsers (fallback)
-        if: steps.cache.outputs.cache-hit != 'true'
+        if: needs.setup.outputs.cache-hit != 'true'
         run: npx playwright install --with-deps
 
       - name: Start Next.js app
@@ -354,36 +254,23 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Restore from cache
-        uses: actions/cache/restore@v3
-        id: cache
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+
+      - name: Restore dependencies
+        uses: actions/cache@v3
         with:
           path: |
             node_modules
             ~/.cache/ms-playwright
-          key: ${{ needs.setup.outputs.cache-key }}
-          fail-on-cache-miss: false
+          key: v1-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
 
-      - name: Download node_modules artifact (fallback)
-        if:
-          steps.cache.outputs.cache-hit != 'true' &&
-          needs.setup.outputs.artifact-created == 'true'
-        uses: actions/download-artifact@v4
-        with:
-          name: node-modules
-          path: node_modules/
-
-      - name: Install dependencies (emergency fallback)
-        if:
-          steps.cache.outputs.cache-hit != 'true' &&
-          needs.setup.outputs.artifact-created != 'true'
+      - name: Install dependencies (fallback)
+        if: needs.setup.outputs.cache-hit != 'true'
         run: npm ci
-
-      - name: Set up Node.js (only if cache miss)
-        if: steps.cache.outputs.cache-hit != 'true'
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
 
       - name: Run npm audit
         run: |
@@ -408,48 +295,35 @@ jobs:
   performance_check:
     name: Performance Check
     runs-on: ubuntu-latest
-    needs: [setup, build]
+    needs: [build]
     continue-on-error: true
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Restore from cache
-        uses: actions/cache/restore@v3
-        id: cache
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+
+      - name: Restore dependencies
+        uses: actions/cache@v3
         with:
           path: |
             node_modules
             ~/.cache/ms-playwright
-          key: ${{ needs.setup.outputs.cache-key }}
-          fail-on-cache-miss: false
+          key: v1-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
 
-      - name: Download node_modules artifact (fallback)
-        if:
-          steps.cache.outputs.cache-hit != 'true' &&
-          needs.setup.outputs.artifact-created == 'true'
-        uses: actions/download-artifact@v4
+      - name: Restore build artifacts
+        uses: actions/cache@v3
         with:
-          name: node-modules
-          path: node_modules/
-
-      - name: Install dependencies (emergency fallback)
-        if:
-          steps.cache.outputs.cache-hit != 'true' &&
-          needs.setup.outputs.artifact-created != 'true'
-        run: npm ci
-
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: build-files
           path: .next
+          key: v1-build-${{ github.sha }}
 
-      - name: Set up Node.js (only if cache miss)
-        if: steps.cache.outputs.cache-hit != 'true'
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
+      - name: Install dependencies (fallback)
+        if: needs.setup.outputs.cache-hit != 'true'
+        run: npm ci
 
       - name: Bundle size analysis
         run: |
