--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,7 +83,7 @@ jobs:
   unit_tests:
     name: Unit Tests
     runs-on: ubuntu-latest
-    needs: [setup]
+    needs: setup
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -125,7 +125,7 @@ jobs:
   integration_tests:
     name: Integration Tests
     runs-on: ubuntu-latest
-    needs: [setup]
+    needs: setup
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -154,7 +154,7 @@ jobs:
   build:
     name: Build Application
     runs-on: ubuntu-latest
-    needs: [setup, linters]
+    needs: setup
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -189,7 +189,7 @@ jobs:
   system_tests:
     name: System Tests (E2E)
     runs-on: ubuntu-latest
-    needs: [build, unit_tests, integration_tests]
+    needs: build
     timeout-minutes: 15
     strategy:
       fail-fast: false
