--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@lhci/cli": "^0.12.0",
     "@playwright/test": "^1.55.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/jest-dom": "^6.8.0",
@@ -54,6 +55,7 @@
     "ts-jest": "^29.4.1",
     "typescript": "^5",
     "typescript-eslint": "^8.40.0",
+    "wait-on": "^8.0.4",
     "whatwg-fetch": "^3.6.20"
   }
 }
