chore: fix deps, lint, eslint/jest config and e2e test issues

--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@sentry/node": "^10.6.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
+    "lighthouse": "^12.8.1",
     "next": "^15.5.0",
+    "puppeteer-core": "^24.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
@@ -29,30 +32,31 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
-    "@lhci/cli": "^0.12.0",
+    "@lhci/cli": "^0.15.1",
     "@playwright/test": "^1.55.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
-    "@types/next": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.40.0",
     "@typescript-eslint/parser": "^8.40.0",
     "autoprefixer": "^10.4.17",
-    "eslint": "^8.57.1",
+    "eslint": "^9.34.0",
     "eslint-config-next": "^15.5.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
+    "glob": "^11.0.3",
     "globals": "^16.3.0",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^4.1.11",
     "ts-jest": "^29.4.1",
     "typescript": "^5",
