ENG-57: Create DatePicker component with support for custom ranges and formats + tests

--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@heroicons/react": "^2.2.0",
     "@sentry/node": "^10.6.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "lighthouse": "^12.8.1",
     "next": "^15.5.0",
     "puppeteer-core": "^24.17.0",
     "react": "^18.2.0",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
     "recharts": "^3.1.2",
